Подключить шрифт PTSans

--- a/src/markup/pages/index.jade
+++ b/src/markup/pages/index.jade
@@ -1,7 +1,16 @@
 extends ../layouts/default
+include ../components/modal-login/modal-login
+include ../components/modal-overlay/modal-overlay
 
 block vars
     -pageSettings.title = 'Главная';
 
+block head
+    link(href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet")
+
 block content
     // Контент здесь
+
+block modal
+    +modal-login()
+    +modal-overlay()
