--- a/src/markup/static/scss/vars.scss
+++ b/src/markup/static/scss/vars.scss
@@ -1,2 +1,8 @@
 // File for scss-vars.
 // For example: main colors, paddings and so on.
+
+// User variables
+$fontPTSans: 'PT Sans', Arial, sans-serif;
+$bg-grey: #f0f0f0;
+$font-blue: #0c4da2;
+$cross-grey: #999;
