Сбросить стили ссылок

--- a/src/markup/static/scss/GUI.scss
+++ b/src/markup/static/scss/GUI.scss
@@ -1,2 +1,9 @@
 // GUI stylies of the project
 // For example, styles of the links, buttons and so on.
+
+// Добавлено мною
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
