--- a/src/markup/components/header/header.scss
+++ b/src/markup/components/header/header.scss
@@ -1,3 +1,11 @@
 .header {
-
+    background-color: $bg-grey;
+    &__wrapper {
+        @include clearfix;
+        margin: 0 auto;
+        padding: 10px 120px 15px 70px;
+        max-width: 1100px;
+        color: $font-blue;
+        font-size: 12px;
+    }
 }
