--- a/src/markup/static/scss/entry/partials/_components.scss
+++ b/src/markup/static/scss/entry/partials/_components.scss
@@ -1,3 +1,7 @@
 // @import 'components/_template/_template.scss';
 @import 'components/header/header';
 @import 'components/footer/footer';
+@import 'components/location/location';
+@import 'components/user-block/user-block';
+@import 'components/modal-login/modal-login';
+@import 'components/modal-overlay/modal-overlay'
