Сверстать контент-топ

--- a/src/markup/static/scss/entry/partials/_components.scss
+++ b/src/markup/static/scss/entry/partials/_components.scss
@@ -1,7 +1,10 @@
 // @import 'components/_template/_template.scss';
+@import 'components/search/search';
 @import 'components/header/header';
 @import 'components/footer/footer';
 @import 'components/location/location';
 @import 'components/user-block/user-block';
+@import 'components/content/content';
+@import 'components/menu/menu';
 @import 'components/modal-login/modal-login';
 @import 'components/modal-overlay/modal-overlay'
