--- a/src/markup/static/scss/vars.scss
+++ b/src/markup/static/scss/vars.scss
@@ -3,6 +3,10 @@
 
 // User variables
 $fontPTSans: 'PT Sans', Arial, sans-serif;
-$bg-grey: #f0f0f0;
+$font-red: #e42644;
 $font-blue: #0c4da2;
+$font-grey: #b2b2b2;
 $cross-grey: #999;
+$border-red: #e7435d;
+$border-grey: #c8c8c8;
+$bg-grey: #f0f0f0;
