--- a/src/markup/static/scss/vars.scss
+++ b/src/markup/static/scss/vars.scss
@@ -3,6 +3,8 @@
 
 // User variables
 $fontPTSans: 'PT Sans', Arial, sans-serif;
+$fontHelLight: 'HeliousLightC', Arial, sans-serif;
+$fontHelThin: 'HeliousThinC', Arial, sans-serif;
 $font-red: #e42644;
 $font-blue: #0c4da2;
 $font-grey: #b2b2b2;
