--- a/src/markup/static/scss/entry/partials/_components.scss
+++ b/src/markup/static/scss/entry/partials/_components.scss
@@ -4,7 +4,7 @@
 @import 'components/footer/footer';
 @import 'components/location/location';
 @import 'components/user-block/user-block';
-@import 'components/content/content';
-@import 'components/menu/menu';
+@import 'components/tabs/tabs';
+@import 'components/slider/slider';
 @import 'components/modal-login/modal-login';
 @import 'components/modal-overlay/modal-overlay'
