--- a/src/markup/components/search/search.scss
+++ b/src/markup/components/search/search.scss
@@ -8,6 +8,7 @@
         padding: 0 25px 0 10px;
         width: 100%;
         height: 30px;
+        font-size: 14px;
         border: 1px solid $border-grey;
         &[placeholder] {
             color: $font-grey;
