--- a/src/markup/components/slider/slider.scss
+++ b/src/markup/components/slider/slider.scss
@@ -1,14 +1,14 @@
 .slider {
+    position: relative;
     &__item {
         padding-top: 39%;
-        position: relative;
         background-repeat: no-repeat;
         background-size: 100% auto;
     }
     &__icon-arrow-left {
         position: absolute;
-        top: 40%;
-        left: 70px;
+        top: 25%;
+        left: 10px;
         @include bg($arrow-left);
         cursor: pointer;
         &:hover {
@@ -17,11 +17,19 @@
         &:active {
             @include bg($arrow-left-red);
         }
+        @include above(640px) {
+            top: 40%;
+            left: 40px;
+        }
+        @include above(1020px) {
+            top: 180px;
+            left: 70px;
+        }
     }
     &__icon-arrow-right {
         position: absolute;
-        top: 40%;
-        right: 20px;
+        top: 25%;
+        right: 10px;
         width: 35px;
         height: 64px;
         @include bg($arrow-right);
@@ -32,35 +40,80 @@
         &:active {
             @include bg($arrow-right-red);
         }
+        @include above(640px){
+            top: 40%;
+            right: 20px;
+        }
+        @include above(1020px) {
+            top: 180px;
+        }
     }
     &__description {
         position: absolute;
-        bottom: 60px;
-        left: 150px;
-        width: 755px;
+        bottom: 0;
+        left: 15%;
+        width: 72%;
         color: #fff;
+        @include above(840px) {
+            bottom: 30px;
+        }
+        @include above(1020px) {
+            bottom: 40px;
+            left: 150px;
+        }
+        @include above(1100px) {
+            bottom: 60px;
+        }
     }
     &__text {
-        display: block;
+        display: inline-block;
+        width: 100%;
         font-family: $fontHelThin;
         font-size: 280%;
+        @include above(640px) {
+            font-size: 300%;
+            line-height: 1;
+        }
     }
     &__title {
         position: relative;
+        display: inline-block;
         font-family: $fontHelLight;
-        font-size: 475%;
-        line-height: 65px;
+        font-size: 350%;
         &::after {
             position: absolute;
             content: '';
             top: 0;
             right: -30px;
             @include bg($icon-plane);
+            @include between(320px, 639px) {
+                display: none;
+            }
         }
+        @include above(500px) {
+            font-size: 380%;
+        }
+        @include above(640px) {
+            line-height: 1.2;
+        }
+        @include above(840px) {
+            font-size: 475%;
+        }
+        // line-height: 65px;
     }
     &__note {
-        display: block;
+        display: inline-block;
+        width: 100%;
         font-family: $fontHelLight;
-        font-size: 14px;
+        font-size: 9px;
+        @include above(500px) {
+            font-size: 11px;
+        }
+        @include above(640px) {
+            font-size: 12px;
+        }
+        @include above(840px) {
+            font-size: 14px;
+        }
     }
 }
