--- a/src/markup/static/scss/common.scss
+++ b/src/markup/static/scss/common.scss
@@ -11,5 +11,15 @@ html, body {
 }
 body {
     font-family: $fontPTSans;
-    font-size: 16px;
+    font-size: 40%;
+    line-height: 1.6;
+    @include above(500px) {
+        font-size: 60%;
+    }
+    @include above(640px) {
+        font-size: 80%;
+    }
+    @include above(1020px) {
+        font-size: 90%;
+    }
 }
