--- a/src/markup/components/tabs/tabs.jade
+++ b/src/markup/components/tabs/tabs.jade
@@ -8,7 +8,12 @@ mixin tabs(data)
             +search()(class='tabs__search')
             +e.control
                 each item in tabs.list
-                    +e.A.link(href="jav0" id=item.id)
+                    +e.A.link(href=item.href id=item.id)
                         +e.SPAN.title(class=item.active?'tabs__title_active':'') #{item.title}
         +e.viewbox
-            +slider()(class="tabs__content")
+            +e.content(id=tabs.opportunity.id + '-content' class=tabs.opportunity.active?'tabs__content_active':'')
+                +slider(tabs.slides.content.opportunity, id=tabs.opportunity.id)
+            +e.content(id=tabs.info.id + '-content' class=tabs.info.active?'tabs__content_active':'')
+                +slider(tabs.slides.content.info, id=tabs.info.id)
+            +e.content(id=tabs.privilege.id + '-content' class=tabs.privilege.active?'tabs__content_active':'')
+                +slider(tabs.slides.content.privilege, id=tabs.privilege.id)
