--- a/src/markup/components/slider/slider.jade
+++ b/src/markup/components/slider/slider.jade
@@ -1,9 +1,9 @@
-mixin slider(data)
+mixin slider(param, idTab)
     +b.slider()&attributes(attributes)
         +e.icon-arrow-left
         +e.icon-arrow-right
-        each item in slider.list
-            +e.item(style="background-image:url('#{item.src}')")
+        each item, index in param
+            +e.item(id="#{idTab}-#{index}" class=item.active?'slider__item_active':''  style="background-image:url('#{item.src}')")
                 +e.P.description
                     +e.SPAN.text #{item.text}
                     +e.SPAN.title #{item.title}
