--- a/src/markup/components/tabs/tabs.scss
+++ b/src/markup/components/tabs/tabs.scss
@@ -70,8 +70,12 @@
         border-top: 1px solid $border-grey;
     }
     &__content {
+        display: none;
         margin: 0 auto;
         min-width: 320px;
         max-width: 1100px;
+        &_active {
+            display: block;
+        }
     }
 }
