--- a/src/markup/static/scss/entry/partials/_components.scss
+++ b/src/markup/static/scss/entry/partials/_components.scss
@@ -1,10 +1,12 @@
 // @import 'components/_template/_template.scss';
 @import 'components/search/search';
+@import 'components/box/box';
 @import 'components/header/header';
-@import 'components/footer/footer';
 @import 'components/location/location';
 @import 'components/user-block/user-block';
 @import 'components/tabs/tabs';
 @import 'components/slider/slider';
+@import 'components/input/input';
+@import 'components/button/button';
 @import 'components/modal-login/modal-login';
 @import 'components/modal-overlay/modal-overlay'
