--- a/src/markup/static/scss/common.scss
+++ b/src/markup/static/scss/common.scss
@@ -23,3 +23,14 @@ body {
         font-size: 90%;
     }
 }
+input {
+    &:active,
+    &:focus {
+        outline: none;
+        border: 2px solid $font-blue;
+    }
+}
+button {
+    box-shadow: none;
+    border: none;
+}
