--- a/src/markup/static/scss/vars.scss
+++ b/src/markup/static/scss/vars.scss
@@ -11,4 +11,5 @@ $font-grey: #b2b2b2;
 $cross-grey: #999;
 $border-red: #e7435d;
 $border-grey: #c8c8c8;
+$border-green: #028900;
 $bg-grey: #f0f0f0;
