--- a/src/markup/components/tabs/tabs.scss
+++ b/src/markup/components/tabs/tabs.scss
@@ -5,7 +5,7 @@
         padding: 10px 20px 0;
         max-width: 1100px;
         @include above(840px) {
-            padding: 10px 70px 0;
+            padding: 10px 70px 0 54px;
         }
     }
     &__logo {
@@ -41,7 +41,7 @@
     }
     &__title {
         display: inline-block;
-        padding: 15px;
+        padding: 6px 10px 0;
         height: 60px;
         font-size: 16px;
         cursor: pointer;
@@ -51,18 +51,17 @@
         &:hover {
             color: rgba(0, 0, 0, .5);
         }
-        &_active {
+    }
+    &__link_active &__title {
+        color: $font-red;
+        border-top: 2px solid $border-red;
+        border-left: 1px solid $border-grey;
+        border-right: 1px solid $border-grey;
+        border-bottom: 1px solid #fff;
+        cursor: default;
+        &:hover {
             color: $font-red;
-            border-top: 2px solid $border-red;
-            border-left: 1px solid $border-grey;
-            border-right: 1px solid $border-grey;
-            border-bottom: 1px solid #fff;
-            cursor: default;
-            &:hover {
-                color: $font-red;
-            }
         }
-
     }
     &__viewbox {
         margin-top: -3px;
@@ -74,6 +73,9 @@
         margin: 0 auto;
         min-width: 320px;
         max-width: 1100px;
+        box-shadow:
+            0 27px 0 -18px rgba(53, 53, 53, 0.7),
+            0 55px 0 -40px rgba(53, 53, 53, 0.3);
         &_active {
             display: block;
         }
