--- a/src/markup/components/button/button.scss
+++ b/src/markup/components/button/button.scss
@@ -7,4 +7,10 @@
     &:hover {
         background-color: $cross-grey;
     }
+    &:disabled {
+        color: $font-grey;
+        &:hover {
+            background-color: $bg-grey;
+        }
+    }
 }
